# Minigames

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml  run.sh
minigames/: __main__.py  bot.py  config.py  undefined.py
minigames/database/: converters.py  database.py
minigames/database/migrations/0000/: describe.json  migrations.sql
minigames/database/migrations/0001/: describe.json  migrations.sql
minigames/database/models/: counting.py
minigames/plugins/: _checks.py  counting.py  misc.py
tests/: test_import.py
