[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "minigames"
version = "0.1.0"
description = "Fun minigames for your server."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
hikari = "^2.0.0.dev112"
apgorm = "^1.0.0b11"
hikari-crescent = "^0.4.0"
cachetools = "^5.2.0"
types-cachetools = "^5.2.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.991"
nox = "^2022.8.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
