[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "minigames"
version = "0.1.0"
description = "Fun minigames for your server."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
hikari = "^2.0.0.dev120"
apgorm = "^1.0.0b14"
hikari-crescent = "^0.6.2"
cachetools = "^5.3.1"
types-cachetools = "^5.3.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.274"
black = "^23.3.0"
nox = "^2023.4.22"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
